# HashProject

./: BEFORE_AFTER_COMPARISON.md  BENCHMARK_README.md  CMakeLists.txt  EXTENDED_HYBRID_MODELS.md  IMPROVEMENTS_SUMMARY.md  QUICK_RESULTS_SUMMARY.md  README.md  visualize_results.py
data/: passwords.txt
include/: adaptive_security_hybrid.hpp  base_hash.hpp  basic_crypto_hash.hpp  basic_perfect_hash.hpp  bdz_mphf.hpp  benchmark.hpp  benchmark_suite.hpp  blake3_hash.hpp  cache_partitioned_hybrid.hpp  cuckoo_perfect_hash.hpp  hybrid_crypto_perfect.hpp  hybrid_perfect_verify.hpp  murmur_hash.hpp  parallel_verification_hybrid.hpp  siphash.hpp  two_path_hybrid.hpp  ultimate_hybrid.hpp  ultra_low_memory_hybrid.hpp
src/: adaptive_security_hybrid.cpp  basic_crypto_hash.cpp  basic_perfect_hash.cpp  bdz_mphf.cpp  benchmark_runner.cpp  cache_partitioned_hybrid.cpp  main.cpp  parallel_verification_hybrid.cpp  throughput_benchmark.cpp  two_path_hybrid.cpp  ultimate_hybrid.cpp  ultra_low_memory_hybrid.cpp
src/hash/: argon2_simple.cpp  argon2_simple.h  hmac.cpp  hmac.h  iterative_hash.cpp  iterative_hash.h  mphf.cpp  mphf.h  pbkdf2.cpp  pbkdf2.h  sha256.cpp  sha256.h  simple_hash.cpp  simple_hash.h
src/mphf/: mphf.cpp  mphf.h
src/util/: security_analyzer.cpp  security_analyzer.h  util.cpp  util.h
tests/: test_password_hash.cpp
